--- a/index.html
+++ b/index.html
@@ -64,6 +64,20 @@
         position: absolute;
         /*background-color:red;*/
       }
+      .loading_bar {
+        position: absolute;
+        z-index: 6;
+        transform: translate(-50%, -50%);
+      }
+      .loading_bar_fill {
+        position: absolute;
+        z-index: 6;
+        width: 0%;
+      	height: 100%;
+        top: 0%;
+        bottom: 0%;
+        left: 0%;
+      }
       .loading_logo {
         position: absolute;
         transform: translate(-50%, -50%);
@@ -86,35 +100,42 @@
     <canvas id="canvas" class="canvas" tabindex="-1"></canvas>
     <div class="loading_bg">
       <div class="loading">
-        <div id="flags" style="position: absolute; top: 20%; left: -1.3%; width: 100%; height: 100%;">
-          <div id="flag1" style="position: absolute; top: 0%; left: 5%; width: 13%; height: 5%; pointer-events: none; background-position: center; background-repeat: no-repeat; background-size: contain; background-attachment: scroll; background-image: url('flag1.jpg');"></div>
+        <div id="flags" style="position: absolute; top: 20%; left: 7%; width: 100%; height: 100%;">
+          <div id="flag1" style="position: absolute; top: 0%; left: 5%; width: 7%; height: 5%; pointer-events: none; background-position: center; background-repeat: no-repeat; background-size: contain; background-attachment: scroll; background-image: url('flag1.jpg');"></div>
 
-          <div id="flag2" style="position: absolute; top: 0%; left: 21%; width: 13%; height: 5%; pointer-events: none; background-position: center; background-repeat: no-repeat; background-size: contain; background-attachment: scroll; background-image: url('flag2.jpg');"></div>
+          <div id="flag2" style="position: absolute; top: 0%; left: 21%; width: 7%; height: 5%; pointer-events: none; background-position: center; background-repeat: no-repeat; background-size: contain; background-attachment: scroll; background-image: url('flag2.jpg');"></div>
 
-          <div id="flag3" style="position: absolute; top: 0%; left: 37%; width: 13%; height: 5%; pointer-events: none; background-position: center; background-repeat: no-repeat; background-size: contain; background-attachment: scroll; background-image: url('flag3.jpg');"></div>
+          <div id="flag3" style="position: absolute; top: 0%; left: 37%; width: 7%; height: 5%; pointer-events: none; background-position: center; background-repeat: no-repeat; background-size: contain; background-attachment: scroll; background-image: url('flag3.jpg');"></div>
 
-          <div id="flag4" style="position: absolute; top: 0%; left: 53%; width: 13%; height: 5%; pointer-events: none; background-position: center; background-repeat: no-repeat; background-size: contain; background-attachment: scroll; background-image: url('flag4.jpg');"></div>
+          <div id="flag4" style="position: absolute; top: 0%; left: 53%; width: 7%; height: 5%; pointer-events: none; background-position: center; background-repeat: no-repeat; background-size: contain; background-attachment: scroll; background-image: url('flag4.jpg');"></div>
 
-          <div id="flag5" style="position: absolute; top: 0%; left: 69%; width: 13%; height: 5%; pointer-events: none; background-position: center; background-repeat: no-repeat; background-size: contain; background-attachment: scroll; background-image: url('flag5.jpg');"></div>
+          <div id="flag5" style="position: absolute; top: 0%; left: 69%; width: 7%; height: 5%; pointer-events: none; background-position: center; background-repeat: no-repeat; background-size: contain; background-attachment: scroll; background-image: url('flag5.jpg');"></div>
 
-          <div id="flag6" style="position: absolute; top: 0%; left: 85%; width: 13%; height: 5%; pointer-events: none; background-position: center; background-repeat: no-repeat; background-size: contain; background-attachment: scroll; background-image: url('flag6.jpg');"></div>
+          <div id="flag6" style="position: absolute; top: 0%; left: 85%; width: 7%; height: 5%; pointer-events: none; background-position: center; background-repeat: no-repeat; background-size: contain; background-attachment: scroll; background-image: url('flag6.jpg');"></div>
         </div>
-        <p id="bottom_text" style="position: absolute; top: 85%; bottom: 0; width: 100%; max-width: 100%; text-align: center; color: white;">Много много текста<br>Аж катица слеза<br><br>Запатентовано, не красть! (c) 2024</p>
+        <p id="bottom_text" style="position: absolute; top: 82%; left: 10%; bottom: 0; width: 100%; max-width: 80%; text-align: center; color: white; opacity: 70%;">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum для распечатки образцов.<br><br>Все права защищены (c) 2024</p>
         <div id="loading_gif" style="position: absolute; transform: translate(-50%, -50%); top: 45%; width: 20%; height: 20%; pointer-events: none; background-position: center; background-repeat: no-repeat; background-size: contain; background-attachment: scroll; background-image: url('loading.gif');"></div>
+        <p id="loading_text" style="position: absolute; top: 60%; bottom: 0; width: 100%; max-width: 100%; text-align: center; color: white;">0%</p>
         <div class="loading_logo" id="company_logo"></div>
         <div class="loading_logo" id="game_logo"></div>
+        <div class="loading_bar">
+          <div class="loading_bar_fill"></div>
+        </div>
       </div>
     </div>
     <script>
       var canvas = document.querySelector("#canvas");
       var loading_bg = document.querySelector(".loading_bg");
       var loading = document.querySelector(".loading");
+      var loading_bar = document.querySelector(".loading_bar");
+      var loading_bar_fill = document.querySelector(".loading_bar_fill");
       var company_logo = document.getElementById("company_logo");
       var game_logo = document.getElementById("game_logo");
       var flag_container = document.getElementById("flags");
       var flags = [document.getElementById("flag1"), document.getElementById("flag2"), document.getElementById("flag3"), document.getElementById("flag4"), document.getElementById("flag5"), document.getElementById("flag6")];
       var bottom_text = document.getElementById("bottom_text");
       var loading_gif = document.getElementById("loading_gif");
+      var loading_text = document.getElementById("loading_text");
 
       // Для того, чтобы текст правильно масштабировался
       var scaleFactor;
@@ -166,21 +187,41 @@
 
 
       company_logo.style.backgroundImage = "url('company_logo.png')";
-      game_logo.style.backgroundImage = "url('game_logo.png')";
+
+      // Настраиваем лого во время загрузочного экрана
+      game_logo.style.backgroundImage = "url('title.png')";
 
       // Настраиваем фон полос по бокам
-      document.body.style.backgroundImage = "linear-gradient(#4649C1, #2C0484)";
+      document.body.style.backgroundImage = "linear-gradient(#3036a4, #3036a4)";
 
       // Настраиваем фон загрузочного экрана
-      loading_bg.style.backgroundImage = "linear-gradient(#4649C1, #2C0484)" ;
+      loading_bg.style.backgroundImage = "linear-gradient(#3036a4, #3036a4)";
 
-      function setLoading(logoPositionTop, logoPositionLeft, logoWidth, logoHeight) {
+      function setLoading(logoPositionTop, logoPositionLeft, logoWidth, logoHeight, positionTop, positionLeft, width, height, barColor, barFillColor, barBorder, barFillBorder, barBorderRadius, barFillBorderRadius, barBackgroundImage, barBackgroundSize) {
         // Указываем размер логотипа
         company_logo.style.top = logoPositionTop;
         company_logo.style.left = logoPositionLeft;
 
         company_logo.style.width = logoWidth; 
         company_logo.style.height = logoHeight;
+
+        loading_bar.style.top = positionTop;
+        loading_bar.style.left = positionLeft;
+
+        loading_bar.style.width = width;
+        loading_bar.style.height = height;
+
+        loading_bar.style.backgroundColor = barColor;
+        loading_bar_fill.style.backgroundColor = barFillColor;
+
+        loading_bar.style.boxShadow = barBorder;
+        loading_bar_fill.style.boxShadow = barFillBorder;
+
+        loading_bar.style.borderRadius = barBorderRadius;
+        loading_bar_fill.style.borderRadius = barFillBorderRadius;
+
+        loading_bar.style.backgroundImage = loading_bar_fill.style.backgroundImage = barBackgroundImage;
+        loading_bar.style.backgroundSize = loading_bar_fill.style.backgroundSize = barBackgroundSize;
       }
 
       // Фиксация разрешения
@@ -188,16 +229,16 @@
         if(window.innerWidth / window.innerHeight > aspectRatio) {
           object.style.width = window.innerHeight * aspectRatio + "px";
           object.style.height = "100%";
-          scaleFactor = window.innerHeight * aspectRatio / 21;
+          scaleFactor = window.innerHeight * aspectRatio / 20;
         } else {
           object.style.width = "100%";
           object.style.height = window.innerWidth / aspectRatio + "px";
-          scaleFactor = window.innerWidth / aspectRatio / 34;
+          scaleFactor = window.innerWidth / aspectRatio / 36;
         }
 
         var text = document.getElementsByTagName("p");
         for(let i = 0; i < text.length; i++) {
-          text[i].style.fontSize = scaleFactor * 0.7 + 'px';
+          text[i].style.fontSize = scaleFactor * 0.5 + 'px';
         }
 
         // Центрируем
@@ -210,12 +251,15 @@
 
       // Настраиваем расположение, размер и оформление полосы с лого
       var loading_bar_style;
-      var loadingStyleText = '0';
+      var loadingStyleText = '';
 
       var loadingZeroStrings = ["0"];
+      var loadingOneStrings = ["1"];
 
       if(loadingZeroStrings.some(i => loadingStyleText.includes(i))) {
         loading_bar_style = 0;
+      } else if(loadingOneStrings.some(i => loadingStyleText.includes(i))) {
+        loading_bar_style = 1;
       } else {
         loading_bar_style = 0;
       }
@@ -224,29 +268,51 @@
       // Вызываем апдейт при входе на страницу и изменений размеров окна браузера
       function Update() {
 
-          lock(loading, 9/16);
-          if(loading_bar_style == 0) {
-            // Минимализм со свечением
-            setLoading("10%", "50%", "30%", "30%");
-            flag_container.style.top = "20%";
-            for(let i = 0; i < flags.length; i++) {
-              flags[0].style.left = "5%";
-              flags[1].style.left = "21%";
-              flags[2].style.left = "37%";
-              flags[3].style.left = "53%";
-              flags[4].style.left = "69%";
-              flags[5].style.left = "85%";
-            }
-            loading_gif.style.top = "55%";
-            loading_gif.style.width = "20%";
-            loading_gif.style.height = "20%";
-            loading_gif.style.left = "50%";
-
-            game_logo.style.top = "37%";
-            game_logo.style.left = "50%";
-            game_logo.style.width = "30%"; 
-            game_logo.style.height = "30%";
+        lock(loading, 9/16);
+        if(loading_bar_style == 0) {
+          setLoading("10%", "50%", "40%", "40%", "75%", "50%", "70%", "2%", "rgba(255, 255, 255, 0.1)", "#FFF", "0", "0 0 10px rgba(255, 255, 255, 0.5)", "0", "0", "0", "0");
+          flag_container.style.top = "20%";
+          for(let i = 0; i < flags.length; i++) {
+            flags[0].style.left = "7%";
+            flags[1].style.left = "20%";
+            flags[2].style.left = "33%";
+            flags[3].style.left = "46%";
+            flags[4].style.left = "59%";
+            flags[5].style.left = "72%";
           }
+          loading_text.style.top = "76%";
+          loading_gif.style.display = "none";
+
+          game_logo.style.top = "50%";
+          game_logo.style.left = "50%";
+          game_logo.style.width = "50%"; 
+          game_logo.style.height = "50%";
+        } else if(loading_bar_style == 1) {
+          setLoading("10%", "50%", "40%", "40%", "75%", "50%", "70%", "2%", "rgba(255, 255, 255, 0.1)", "#FFF", "0", "0 0 10px rgba(255, 255, 255, 0.5)", "0", "0", "0", "0");
+          flag_container.style.top = "20%";
+          for(let i = 0; i < flags.length; i++) {
+            flags[0].style.left = "7%";
+            flags[1].style.left = "20%";
+            flags[2].style.left = "33%";
+            flags[3].style.left = "46%";
+            flags[4].style.left = "59%";
+            flags[5].style.left = "72%";
+          }
+          loading_text.style.display = "none";
+          loading_bar.style.display = "none";
+          loading_bar_fill.style.display = "none";
+          loading_gif.style.display = "block";
+          loading_gif.style.top = "75%";
+          loading_gif.style.width = "15%";
+          loading_gif.style.height = "15%";
+          loading_gif.style.left = "50%";
+
+          game_logo.style.top = "50%";
+          game_logo.style.left = "50%";
+          game_logo.style.width = "50%"; 
+          game_logo.style.height = "50%";
+        }
+
       }
 
       Update();
@@ -270,6 +336,8 @@
           productName: "RSP",
           productVersion: "0.1",
         }, (progress) => {
+          loading_bar_fill.style.width = 111.2 * progress + "%";
+          loading_text.innerHTML = Math.round(progress * 100) + '%';
           Update();
         }).then((unityInstance) => {
           myGameInstance = unityInstance;
