--- a/index.html
+++ b/index.html
@@ -100,18 +100,22 @@
     <canvas id="canvas" class="canvas" tabindex="-1"></canvas>
     <div class="loading_bg">
       <div class="loading">
-        <div id="flags" style="position: absolute; top: 20%; left: 7%; width: 100%; height: 100%;">
-          <div id="flag1" style="position: absolute; top: 0%; left: 5%; width: 7%; height: 5%; pointer-events: none; background-position: center; background-repeat: no-repeat; background-size: contain; background-attachment: scroll; background-image: url('flag1.jpg');"></div>
+        <div id="flags" style="position: absolute; top: 20%; left: 5%; width: 100%; height: 100%;">
+          <div id="flag1" style="position: absolute; top: 0%; left: 1%; width: 6%; height: 5%; pointer-events: none; background-position: center; background-repeat: no-repeat; background-size: contain; background-attachment: scroll; background-image: url('flag1.jpg');"></div>
 
-          <div id="flag2" style="position: absolute; top: 0%; left: 21%; width: 7%; height: 5%; pointer-events: none; background-position: center; background-repeat: no-repeat; background-size: contain; background-attachment: scroll; background-image: url('flag2.jpg');"></div>
+          <div id="flag2" style="position: absolute; top: 0%; left: 16%; width: 6%; height: 5%; pointer-events: none; background-position: center; background-repeat: no-repeat; background-size: contain; background-attachment: scroll; background-image: url('flag2.jpg');"></div>
 
-          <div id="flag3" style="position: absolute; top: 0%; left: 37%; width: 7%; height: 5%; pointer-events: none; background-position: center; background-repeat: no-repeat; background-size: contain; background-attachment: scroll; background-image: url('flag3.jpg');"></div>
+          <div id="flag3" style="position: absolute; top: 0%; left: 37%; width: 6%; height: 5%; pointer-events: none; background-position: center; background-repeat: no-repeat; background-size: contain; background-attachment: scroll; background-image: url('flag3.jpg');"></div>
 
-          <div id="flag4" style="position: absolute; top: 0%; left: 53%; width: 7%; height: 5%; pointer-events: none; background-position: center; background-repeat: no-repeat; background-size: contain; background-attachment: scroll; background-image: url('flag4.jpg');"></div>
+          <div id="flag4" style="position: absolute; top: 0%; left: 53%; width: 6%; height: 5%; pointer-events: none; background-position: center; background-repeat: no-repeat; background-size: contain; background-attachment: scroll; background-image: url('flag4.jpg');"></div>
 
-          <div id="flag5" style="position: absolute; top: 0%; left: 69%; width: 7%; height: 5%; pointer-events: none; background-position: center; background-repeat: no-repeat; background-size: contain; background-attachment: scroll; background-image: url('flag5.jpg');"></div>
+          <div id="flag5" style="position: absolute; top: 0%; left: 69%; width: 6%; height: 5%; pointer-events: none; background-position: center; background-repeat: no-repeat; background-size: contain; background-attachment: scroll; background-image: url('flag5.jpg');"></div>
 
-          <div id="flag6" style="position: absolute; top: 0%; left: 85%; width: 7%; height: 5%; pointer-events: none; background-position: center; background-repeat: no-repeat; background-size: contain; background-attachment: scroll; background-image: url('flag6.jpg');"></div>
+          <div id="flag6" style="position: absolute; top: 0%; left: 85%; width: 6%; height: 5%; pointer-events: none; background-position: center; background-repeat: no-repeat; background-size: contain; background-attachment: scroll; background-image: url('flag6.jpg');"></div>
+
+          <div id="flag7" style="position: absolute; top: 0%; left: 85%; width: 6%; height: 5%; pointer-events: none; background-position: center; background-repeat: no-repeat; background-size: contain; background-attachment: scroll; background-image: url('flag7.jpg');"></div>
+
+          <div id="flag8" style="position: absolute; top: 0%; left: 85%; width: 6%; height: 5%; pointer-events: none; background-position: center; background-repeat: no-repeat; background-size: contain; background-attachment: scroll; background-image: url('flag8.jpg');"></div>
         </div>
         <p id="bottom_text" style="position: absolute; top: 82%; left: 10%; bottom: 0; width: 100%; max-width: 80%; text-align: center; color: white; opacity: 70%;">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum для распечатки образцов.<br><br>Все права защищены (c) 2024</p>
         <div id="loading_gif" style="position: absolute; transform: translate(-50%, -50%); top: 45%; width: 20%; height: 20%; pointer-events: none; background-position: center; background-repeat: no-repeat; background-size: contain; background-attachment: scroll; background-image: url('loading.gif');"></div>
@@ -132,7 +136,7 @@
       var company_logo = document.getElementById("company_logo");
       var game_logo = document.getElementById("game_logo");
       var flag_container = document.getElementById("flags");
-      var flags = [document.getElementById("flag1"), document.getElementById("flag2"), document.getElementById("flag3"), document.getElementById("flag4"), document.getElementById("flag5"), document.getElementById("flag6")];
+      var flags = [document.getElementById("flag1"), document.getElementById("flag2"), document.getElementById("flag3"), document.getElementById("flag4"), document.getElementById("flag5"), document.getElementById("flag6"), document.getElementById("flag7"), document.getElementById("flag8")];
       var bottom_text = document.getElementById("bottom_text");
       var loading_gif = document.getElementById("loading_gif");
       var loading_text = document.getElementById("loading_text");
@@ -273,12 +277,14 @@
           setLoading("10%", "50%", "40%", "40%", "75%", "50%", "70%", "2%", "rgba(255, 255, 255, 0.1)", "#FFF", "0", "0 0 10px rgba(255, 255, 255, 0.5)", "0", "0", "0", "0");
           flag_container.style.top = "20%";
           for(let i = 0; i < flags.length; i++) {
-            flags[0].style.left = "7%";
-            flags[1].style.left = "20%";
-            flags[2].style.left = "33%";
-            flags[3].style.left = "46%";
-            flags[4].style.left = "59%";
-            flags[5].style.left = "72%";
+            flags[0].style.left = "4%";
+            flags[1].style.left = "15%";
+            flags[2].style.left = "26%";
+            flags[3].style.left = "37%";
+            flags[4].style.left = "48%";
+            flags[5].style.left = "59%";
+            flags[6].style.left = "70%";
+            flags[7].style.left = "81%";
           }
           loading_text.style.top = "76%";
           loading_gif.style.display = "none";
@@ -291,12 +297,14 @@
           setLoading("10%", "50%", "40%", "40%", "75%", "50%", "70%", "2%", "rgba(255, 255, 255, 0.1)", "#FFF", "0", "0 0 10px rgba(255, 255, 255, 0.5)", "0", "0", "0", "0");
           flag_container.style.top = "20%";
           for(let i = 0; i < flags.length; i++) {
-            flags[0].style.left = "7%";
-            flags[1].style.left = "20%";
-            flags[2].style.left = "33%";
-            flags[3].style.left = "46%";
-            flags[4].style.left = "59%";
-            flags[5].style.left = "72%";
+            flags[0].style.left = "4%";
+            flags[1].style.left = "15%";
+            flags[2].style.left = "26%";
+            flags[3].style.left = "37%";
+            flags[4].style.left = "48%";
+            flags[5].style.left = "59%";
+            flags[6].style.left = "70%";
+            flags[7].style.left = "81%";
           }
           loading_text.style.display = "none";
           loading_bar.style.display = "none";
