--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="en-us">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, viewport-fit=cover, user-scalable=no"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, viewport-fit=cover, user-scalable=no" />
 
 
     <!-- Спасибо за установку Advanced Templates -->
     <!-- Стой, не спускайся вниз. Залезь мне в сердце, а не в нижние строки код. (feat. Монеточка) -->
-
     <style>
       /* Убираем выделение по нажатию клавиш */
       canvas:focus {
@@ -94,8 +93,13 @@
       }
     </style>
 
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    <script>
+        window.Telegram.WebApp.expand();
+    </script>
 
-  </head>
+
+</head>
   <body>
     <canvas id="canvas" class="canvas" tabindex="-1"></canvas>
     <div class="loading_bg">
