Compression format changed to Brotli, texture compression format changed to ASTC, memory limit set to 350 Mb.

--- a/index.html
+++ b/index.html
@@ -341,11 +341,11 @@
       unityLoader.src = "Build/RSP.loader.js";
       unityLoader.onload = () => {
         createUnityInstance(canvas, {
-          dataUrl: "Build/RSP.data.gz",
-          frameworkUrl: "Build/RSP.framework.js.gz",
-          codeUrl: "Build/RSP.wasm.gz",
+          dataUrl: "Build/RSP.data.br",
+          frameworkUrl: "Build/RSP.framework.js.br",
+          codeUrl: "Build/RSP.wasm.br",
           streamingAssetsUrl: "StreamingAssets",
-          companyName: "DefaultCompany",
+          companyName: "TonBingo",
           productName: "RSP",
           productVersion: "0.1",
         }, (progress) => {
