Decompression fallback and diagrnostics overlay enabled.

--- a/index.html
+++ b/index.html
@@ -341,9 +341,9 @@
       unityLoader.src = "Build/RSP.loader.js";
       unityLoader.onload = () => {
         createUnityInstance(canvas, {
-          dataUrl: "Build/RSP.data.br",
-          frameworkUrl: "Build/RSP.framework.js.br",
-          codeUrl: "Build/RSP.wasm.br",
+          dataUrl: "Build/RSP.data.unityweb",
+          frameworkUrl: "Build/RSP.framework.js.unityweb",
+          codeUrl: "Build/RSP.wasm.unityweb",
           streamingAssetsUrl: "StreamingAssets",
           companyName: "TonBingo",
           productName: "RSP",
